fix nav z-index

--- a/app/assets/stylesheets/api/header.scss
+++ b/app/assets/stylesheets/api/header.scss
@@ -7,6 +7,7 @@
       width: 100%;
       height: 77px;
       justify-content: space-between;
+      z-index: 1;
     }
 
     .headerLeft {
